--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -69,4 +69,11 @@
         android:layout_marginBottom="10dp"
         android:layout_toEndOf="@+id/signInButton"
         android:layout_toRightOf="@+id/signInButton" />
+
+    <TextView
+        android:id="@+id/wrongInfoError"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/signInButton"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
