--- a/app/src/main/res/layout/create_account.xml
+++ b/app/src/main/res/layout/create_account.xml
@@ -169,20 +169,24 @@
 
     <TextView
         android:id="@+id/addressError"
-        android:layout_width="146dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="61dp"
+        android:layout_height="34dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginTop="8dp"
         android:textSize="8sp"
-        app:layout_constraintStart_toEndOf="@+id/place_autocomplete_fragment"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/place_autocomplete_fragment" />
 
     <fragment
         android:id="@+id/place_autocomplete_fragment"
         android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
-        android:layout_width="220dp"
-        android:layout_height="39dp"
+        android:layout_width="206dp"
+        android:layout_height="37dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toStartOf="@+id/addressError"
+        app:layout_constraintHorizontal_bias="0.086"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailFieldAccount" />
 
